--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,12 +19,12 @@ build:
 
 requirements:
   host:
-    - python
+    - python >=3.6
     - pip
     - setuptools >=0.8.0
 
   run:
-    - python
+    - python >=3.6
     - faker >=0.7.0
 
 test:
